--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         ghc: ["9.8.1", "9.6.3", "9.4.8", "9.2.8", "9.0.2", "8.10.7"]
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         exclude:
         - os: windows-latest
           ghc: "9.4.2"
@@ -29,6 +29,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      # Select the gcc version to be 12
+      - if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 100
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 100
+          sudo update-alternatives --set gcc /usr/bin/gcc-12
+          sudo update-alternatives --set g++ /usr/bin/g++-12
 
       - uses: haskell-actions/setup@v2
         id: setup-haskell
